# SoundFusion

./: README.md
nathanai/: .env.example  README.md  pyproject.toml
nathanai/nathanai/: __init__.py  agent.py  cli.py  providers.py  tools.py
nathanai/nathanai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nathanai/tests/: test_basic.py
